--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 add_library(metNum_lib STATIC library.cpp
         include/interpolation.h
         include/linearEquation.h
-        include/aproximation.h
+        include/approximation.h
         include/numericIntegration.h
         include/nonLinearEquation.h
         include/differentialEquation.h
-        src/aproximation.cpp
+        src/approximation.cpp
         examples/exampleNumericIntegration.cpp
         examples/exampleNonLinear.cpp)
